--- a/akka-system-for-random-org/.classpath
+++ b/akka-system-for-random-org/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="D:/instalki/programowanie/akka/akka-2.0.1/lib/akka/akka-actor-2.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/instalki/programowanie/akka/akka-2.0.1/lib/akka/akka-testkit-2.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/instalki/programowanie/scalatest/scalatest-1.7.2/scalatest-1.7.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
